--- a/company/view.html
+++ b/company/view.html
@@ -1,18 +1,21 @@
-<h1>所有公司信息</h1>
-<table align="center" width="80%" class="table table-bordered">
-    <tr>
-        <td colspan="8" align="right">
-            <a href="add.jsp">添加新信息</a>
-        </td>
-    </tr>
-    <tr>
-        <th>编号</th>
-        <th>地址</th>
-        <th>公司名</th>
-        <th>公司负责人</th>
-        <th>联系电话</th>
-        <th>支付宝账号</th>
-        <th>公司代码</th>
-        <th>操作</th>
-    </tr>
-</table>
+<div class="container">
+    <h1>所有公司信息</h1>
+    <table align="center" width="80%" class="table table-bordered">
+        <tr>
+            <td colspan="8" align="right">
+                <a href="add.jsp">添加新信息</a>
+            </td>
+        </tr>
+        <tr>
+            <th>编号</th>
+            <th>地址</th>
+            <th>公司名</th>
+            <th>公司负责人</th>
+            <th>联系电话</th>
+            <th>支付宝账号</th>
+            <th>公司代码</th>
+            <th>操作</th>
+        </tr>
+    </table>
+
+</div>
